--- a/frontend/src/components/CommonLayout/CommonLayout.module.css
+++ b/frontend/src/components/CommonLayout/CommonLayout.module.css
@@ -1,13 +1,13 @@
 .mainLayout {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .topBar {
   display: flex;
   flex-direction: row;
   list-style: none;
-
   align-items: center;
   justify-content: end;
 }
@@ -18,9 +18,9 @@
 
 .body {
   flex: 1 0 0;
-
   display: flex;
   flex-direction: column;
-  align-items: start;
-  padding: 0 2rem;
+  align-items: stretch;
+  width: 100%;
+  padding: 0;
 }
