--- a/frontend/src/components/form-components/FormContainer/FormContainer.module.css
+++ b/frontend/src/components/form-components/FormContainer/FormContainer.module.css
@@ -1,6 +1,18 @@
 .form {
-  display: grid;
-  grid-template-columns: auto auto;
-  align-items: stretch;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 2rem 2.5rem;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
+  width: 100%;
+  max-width: 420px;
+  box-sizing: border-box;
+}
+
+/* Para que ocupe solo el espacio de su contenido y esté centrado */
+.form:has(button[type="submit"]) {
+  align-self: center;
+  justify-content: center;
 }
