--- a/frontend/src/components/AdminForms/AdminForms.module.css
+++ b/frontend/src/components/AdminForms/AdminForms.module.css
@@ -52,10 +52,10 @@ input[type="text"] {
 
 .fieldLabel {
   display: block;
-  font-weight: 500;
+  font-weight: 700;
   color: #374151;
   margin-bottom: 0.25rem;
-  text-align: right;
+  text-align: left;
 }
 
 .formFields {
